--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</article>
 
 		<div class="content__img">
-			<img src="./img/image.png" alt="#">
+			<img src="img/image.png" alt="#">
 		</div>
 
 	</main>
