--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 		<section class="header__nav-buttons">
 		<ul class="header__buttons-left">
-		<ul class="burger header__burger">
-			<ul class="burger__lines--open">
-				<li class="burger__line burger__line-top"></li>
-				<li class="burger__line burger__line-mid"></li>
-				<li class="burger__line burger__line-bot"></li>
-			</ul>
-		</ul>
+			<button class="burger header__burger" onclick="window.location.href = 'menu.html'">
+				<ul class="burger__lines--open">
+					<li class="burger__line burger__line-top"></li>
+					<li class="burger__line burger__line-mid"></li>
+					<li class="burger__line burger__line-bot"></li>
+				</ul>
+			</button>
 		<ul class="buttons__divider--first">
 			<li class="button__divider"><span class="header__divider"></span></li>
 		</ul>
@@ -33,13 +33,13 @@
 		
 		<ul class="buttons header__buttons">
 			<ul class="buttons__center">
-				<li class="button-call"><a href="#"><img src="./img/iconcall.svg" alt="#"></a></li>
+				<li class="button-call"><button href="#"><img src="./img/iconcall.svg" alt="#"></button></li>
 			</ul>
 			<ul class="buttons__center">
-				<li class="button-chat"><a href="#"><img src="./img/iconchat.svg" alt="#"></a></li>
+				<li class="button-chat"><button href="#"><img src="./img/iconchat.svg" alt="#"></button></li>
 			</ul>
 			<ul class="buttons__center">
-				<li class="button-profile"><a href="#"><img src="./img/Groupprofile.svg" alt="#"></a></li>
+				<li class="button-profile"><button href="#"><img src="./img/Groupprofile.svg" alt="#"></button></li>
 			</ul>
 
 			<ul class="buttons__divider">
