--- a/menu.html
+++ b/menu.html
@@ -1,82 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./reset_style.css">
-	<link rel="stylesheet" href="./menu.css">
-	<style type="text/css">
-    </style>
-<title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./reset_style.css" />
+    <link rel="stylesheet" href="./menu.css" />
+    <style type="text/css"></style>
+    <title>Document</title>
+  </head>
+  <body>
     <header class="header">
-        <ul class="header__btns">
-            <ul class="header__btns--left">
-                <button class="btn header__burger--close" onclick="window.location.href = 'index.html'">
-                    <li class="burger__line burger__line-top"></li>
-                    <li class="burger__line burger__line-bot"></li>
-                </button>
-                <ul class="header__logo">
-                    <a href="./index.html"><img src="./img/header__logo.svg" alt="#"></a>
-                </ul>
-            </ul>
+      <ul class="header__btns">
+        <ul class="header__btns--left">
+          <button
+            class="btn header__burger--close"
+            onclick="window.location.href = 'index.html'"
+          >
+            <li class="burger__line burger__line-top"></li>
+            <li class="burger__line burger__line-bot"></li>
+          </button>
+          <ul class="header__logo">
+            <a href="./index.html"
+              ><img src="./img/header__logo.svg" alt="#"
+            /></a>
+          </ul>
+        </ul>
 
-            <ul class="header__btns--right">
-                <li>
-                    <button class="btn">
-                        <img src="./img/iconcheckstatus.svg" alt="#">
-                    </button>
-                </li>
-            </ul>
-        </ul>    
-    
-        <nav class="content__nav">
-			<ul class="content__nav-slides">
-				<li><a href="#" class="nav-slide--active">Ремонтируемые устройства</a></li>
-				<li><a href="#">Дополнительные услуги</a></li>
-				<li><a href="#">Цены на услуги</a></li>
-				<li><a href="#">Специальные цены</a></li>
-				<li><a href="#">Ремонтируемые бренды</a></li>
-				<li><a href="#">Адреса сервисных центров</a></li>
-				<li><a href="#">Отзывы</a></li>
-			</ul>
-		</nav>
+        <ul class="header__btns--right">
+          <li>
+            <button class="btn">
+              <img src="./img/iconcheckstatus.svg" alt="#" />
+            </button>
+          </li>
+        </ul>
+      </ul>
+
+      <nav class="content__nav">
+        <ul class="content__nav-slides">
+          <li>
+            <a href="#" class="nav-slide--active">Ремонтируемые устройства</a>
+          </li>
+          <li><a href="#">Дополнительные услуги</a></li>
+          <li><a href="#">Цены на услуги</a></li>
+          <li><a href="#">Специальные цены</a></li>
+          <li><a href="#">Ремонтируемые бренды</a></li>
+          <li><a href="#">Адреса сервисных центров</a></li>
+          <li><a href="#">Отзывы</a></li>
+        </ul>
+      </nav>
     </header>
     <footer class="footer">
-        <ul class="footer__btns">
-			<li>
-                <button class="btn">
-                    <img src="./img/iconcall.svg" alt="#">
-                </button>
-            </li>
-			<li>
-                <button class="btn">
-                    <img src="./img/iconchat.svg" alt="#">
-                </button>
-            </li>
-			<li>
-                <button class="btn">
-                    <img src="./img/Groupprofile.svg" alt="#">
-                </button>
-            </li>
-        </ul>
-        <ul class="footer__mail">
-            <li>
-                <a href="#">mail@cps.com</a>
-            </li>
-        </ul>
-        <ul class="footer__phone">
-            <li>
-                <a href="#">8 800 890 8900</a>
-            </li>
-        </ul>
-        <ul class="footer__lang">
-            <li><a href="#" class="footer__lang--active">RU</a></li>
-            <li><a href="#">EN</a></li>
-            <li><a href="#">CH</a></li>
-        </ul>
+      <ul class="footer__btns">
+        <li>
+          <button class="btn">
+            <img src="./img/iconcall.svg" alt="#" />
+          </button>
+        </li>
+        <li>
+          <button class="btn">
+            <img src="./img/iconchat.svg" alt="#" />
+          </button>
+        </li>
+        <li>
+          <button class="btn">
+            <img src="./img/Groupprofile.svg" alt="#" />
+          </button>
+        </li>
+      </ul>
+      <ul class="footer__mail">
+        <li>
+          <a href="#">mail@cps.com</a>
+        </li>
+      </ul>
+      <ul class="footer__phone">
+        <li>
+          <a href="#">8 800 890 8900</a>
+        </li>
+      </ul>
+      <ul class="footer__lang">
+        <li><a href="#" class="footer__lang--active">RU</a></li>
+        <li><a href="#">EN</a></li>
+        <li><a href="#">CH</a></li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
