--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           /></a>
         </ul>
 
-        <ul class="buttons header__buttons">
+        <ul class="header__buttons">
           <ul class="header__btns--mid">
             <li class="button-call">
               <button href="#"><img src="./img/iconcall.svg" alt="#" /></button>
