--- a/index.html
+++ b/index.html
@@ -12,93 +12,68 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header clearfix">
-      <section class="header__nav-buttons">
-        <ul class="header__buttons--left">
-          <button
-            class="burger header__burger"
-            onclick="window.location.href = 'menu.html'"
-          >
-            <ul class="burger__lines--open">
-              <li class="burger__line burger__line-top"></li>
-              <li class="burger__line burger__line-mid"></li>
-              <li class="burger__line burger__line-bot"></li>
-            </ul>
-          </button>
-          <ul class="buttons__divider--first">
-            <li class="button__divider">
-              <span class="header__divider"></span>
-            </li>
-          </ul>
-          <a href="./index.html"
-            ><img src="./img/header__logo.svg" alt="#" class="header__logo"
+    <header class="header">
+      <ul class="header__list">
+        <li class="header__item">
+          <button class="btn"><img src="./img/burger.svg" alt="#" /></button>
+        </li>
+        <li class="header__item"></li>
+        <li class="header__item">
+          <a href="./index.html" class="header__logo"
+            ><img src="./img/header__logo.svg" alt="#"
           /></a>
-        </ul>
-
-        <ul class="header__buttons">
-          <ul class="header__btns--mid">
-            <li class="button-call">
-              <button href="#"><img src="./img/iconcall.svg" alt="#" /></button>
-            </li>
-          </ul>
-          <ul class="header__btns--mid">
-            <li class="button-chat">
-              <button href="#"><img src="./img/iconchat.svg" alt="#" /></button>
-            </li>
-          </ul>
-          <ul class="header__btns--mid">
-            <li class="button-profile">
-              <button href="#">
-                <img src="./img/Groupprofile.svg" alt="#" />
-              </button>
-            </li>
-          </ul>
-
-          <ul class="buttons__divider">
-            <li class="button__divider">
-              <span class="header__divider"></span>
-            </li>
-          </ul>
-
-          <ul class="header__btns--right">
-            <li>
-              <button>
-                <span>Оставить заявку</span>
-                <div class="btn-img">
-                  <img src="./img/Grouprepair.svg" alt="#" />
-                </div>
-              </button>
-            </li>
-            <li>
-              <button>
-                <span>Статус ремонта</span>
-                <div class="btn-img">
-                  <img src="./img/iconcheckstatus.svg" alt="#" />
-                </div>
-              </button>
-            </li>
-          </ul>
-        </ul>
-      </section>
-
-      <section class="header__title">
-        <h1>Услуги и сервисы</h1>
-      </section>
+        </li>
+        <li class="header__item">
+          <button class="btn"><img src="./img/iconcall.svg" alt="#" /></button>
+        </li>
+        <li class="header__item">
+          <button class="btn"><img src="./img/iconchat.svg" alt="#" /></button>
+        </li>
+        <li class="header__item">
+          <button class="btn">
+            <img src="./img/Groupprofile.svg" alt="#" />
+          </button>
+        </li>
+        <li class="header__item"></li>
+        <li class="header__item">
+          <button class="btn">
+            <img src="./img/Grouprepair.svg" alt="#" />
+          </button>
+        </li>
+        <li class="header__item">
+          <button class="btn">
+            <img src="./img/iconcheckstatus.svg" alt="#" />
+          </button>
+        </li>
+      </ul>
+      <h1 class="header__title">Услуги и сервисы</h1>
     </header>
 
-    <main class="content">
-      <nav class="content__nav">
-        <ul class="content__nav-slides">
-          <li><a href="#">Ремонтируемые устройства</a></li>
-          <li><a href="#">Дополнительные услуги</a></li>
-          <li><a href="#">Цены на услуги</a></li>
-          <li><a href="#">Специальные цены</a></li>
-          <li><a href="#">Ремонтируемые бренды</a></li>
-          <li><a href="#">Адреса сервисных центров</a></li>
-          <li><a href="#">Отзывы</a></li>
-        </ul>
-      </nav>
+    <nav class="nav">
+      <ul class="nav__slides">
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Ремонтируемые устройства</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Дополнительные услуги</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Цены на услуги</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Специальные цены</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Ремонтируемые бренды</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Адреса сервисных центров</a>
+        </li>
+        <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
+      </ul>
+    </nav>
 
+    <main class="content">
       <article class="content__block">
         <div class="content__block-text">
           <p>
