--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./reset_style.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./min768.css" />
-    <link rel="stylesheet" href="./min1120.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset_style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./min768.css">
+    <link rel="stylesheet" href="./min1120.css">
     <title>Document</title>
   </head>
   <body>
     <header class="header">
       <ul class="header__list">
         <li class="header__item">
-          <button class="btn"><img src="./img/burger.svg" alt="#" /></button>
+          <button class="btn"><img src="./img/burger.svg" alt="#"></button>
         </li>
         <li class="header__item"></li>
         <li class="header__item">
           <a href="./index.html" class="header__logo"
             ><img src="./img/header__logo.svg" alt="#"
-          /></a>
+         ></a>
         </li>
         <li class="header__item">
-          <button class="btn"><img src="./img/iconcall.svg" alt="#" /></button>
+          <button class="btn"><img src="./img/iconcall.svg" alt="#"></button>
         </li>
         <li class="header__item">
-          <button class="btn"><img src="./img/iconchat.svg" alt="#" /></button>
+          <button class="btn"><img src="./img/iconchat.svg" alt="#"></button>
         </li>
         <li class="header__item">
           <button class="btn">
-            <img src="./img/Groupprofile.svg" alt="#" />
+            <img src="./img/Groupprofile.svg" alt="#">
           </button>
         </li>
         <li class="header__item"></li>
         <li class="header__item">
           <button class="btn">
-            <img src="./img/Grouprepair.svg" alt="#" />
+            <img src="./img/Grouprepair.svg" alt="#">
           </button>
         </li>
         <li class="header__item">
           <button class="btn">
-            <img src="./img/iconcheckstatus.svg" alt="#" />
+            <img src="./img/iconcheckstatus.svg" alt="#">
           </button>
         </li>
       </ul>
@@ -92,7 +92,7 @@
       </article>
 
       <div class="content__img">
-        <img src="img/image.png" alt="#" />
+        <img src="img/image.png" alt="#">
       </div>
     </main>
   </body>
