--- a/menu.html
+++ b/menu.html
@@ -11,77 +11,75 @@
   </head>
   <body>
     <header class="header">
-      <ul class="header__btns">
-        <ul class="header__btns--left">
-          <button
-            class="btn header__burger--close"
-            onclick="window.location.href = 'index.html'"
-          >
-            <li class="burger__line burger__line-top"></li>
-            <li class="burger__line burger__line-bot"></li>
+      <ul class="header__list">
+        <li class="header__item">
+          <button class="header__btn">
+            <img src="./img/iconburger.svg" alt="#" />
           </button>
-          <ul class="header__logo">
-            <a href="./index.html"
-              ><img src="./img/header__logo.svg" alt="#"
-            /></a>
-          </ul>
-        </ul>
-
-        <ul class="header__btns--right">
-          <li>
-            <button class="btn">
-              <img src="./img/iconcheckstatus.svg" alt="#" />
-            </button>
-          </li>
-        </ul>
+        </li>
+        <li class="header__item">
+          <a href="./index.html" class="header__link"
+            ><img src="./img/header_logo.svg" alt="#"
+          /></a>
+        </li>
+        <li class="header__item">
+          <button class="header__btn">
+            <img src="./img/iconsearch.svg" alt="#" />
+          </button>
+        </li>
       </ul>
-
-      <nav class="content__nav">
-        <ul class="content__nav-slides">
-          <li>
-            <a href="#" class="nav-slide--active">Ремонтируемые устройства</a>
-          </li>
-          <li><a href="#">Дополнительные услуги</a></li>
-          <li><a href="#">Цены на услуги</a></li>
-          <li><a href="#">Специальные цены</a></li>
-          <li><a href="#">Ремонтируемые бренды</a></li>
-          <li><a href="#">Адреса сервисных центров</a></li>
-          <li><a href="#">Отзывы</a></li>
-        </ul>
-      </nav>
     </header>
+
+    <nav class="nav">
+      <ul class="nav__slides">
+        <li class="nav__slide">
+          <a href="#" class="nav__link nav__link--active"
+            >Ремонтируемые устройства</a
+          >
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Дополнительные услуги</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Цены на услуги</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Специальные цены</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Ремонтируемые бренды</a>
+        </li>
+        <li class="nav__slide">
+          <a href="#" class="nav__link">Адреса сервисных центров</a>
+        </li>
+        <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
+      </ul>
+    </nav>
+
     <footer class="footer">
-      <ul class="footer__btns">
-        <li>
-          <button class="btn">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <button class="footer__btn">
             <img src="./img/iconcall.svg" alt="#" />
           </button>
-        </li>
-        <li>
-          <button class="btn">
+          <button class="footer__btn">
             <img src="./img/iconchat.svg" alt="#" />
           </button>
-        </li>
-        <li>
-          <button class="btn">
-            <img src="./img/Groupprofile.svg" alt="#" />
+          <button class="footer__btn">
+            <img src="./img/iconprofile.svg" alt="#" />
           </button>
         </li>
-      </ul>
-      <ul class="footer__mail">
-        <li>
-          <a href="#">mail@cps.com</a>
+        <li class="footer__item">
+          <a href="#" class="footer__link-email">mail@cps.com</a>
         </li>
-      </ul>
-      <ul class="footer__phone">
-        <li>
-          <a href="#">8 800 890 8900</a>
+        <li class="footer__item">
+          <a href="footer__link-phone">8 800 890 8900</a>
         </li>
-      </ul>
-      <ul class="footer__lang">
-        <li><a href="#" class="footer__lang--active">RU</a></li>
-        <li><a href="#">EN</a></li>
-        <li><a href="#">CH</a></li>
+        <li class="footer__item">
+          <a href="" class="footer__lang footer__lang--active">RU</a>
+          <a href="" class="footer__lang">EN</a>
+          <a href="" class="footer__lang">CH</a>
+        </li>
       </ul>
     </footer>
   </body>
