--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href="#" class="nav__link">Ремонтируемые бренды</a>
         </li>
         <li class="nav__slide">
-          <a href="#" class="nav__link">Адреса сервисных центров</a>
+          <a href="./menu.html" class="nav__link">Адреса сервисных центров</a>
         </li>
         <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
       </ul>
