--- a/menu.html
+++ b/menu.html
@@ -10,77 +10,79 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
-      <ul class="header__list">
-        <li class="header__item">
-          <button class="header__btn">
-            <img src="./img/iconburger.svg" alt="#" />
-          </button>
-        </li>
-        <li class="header__item">
-          <a href="./index.html" class="header__link"
-            ><img src="./img/header_logo.svg" alt="#"
-          /></a>
-        </li>
-        <li class="header__item">
-          <button class="header__btn">
-            <img src="./img/iconsearch.svg" alt="#" />
-          </button>
-        </li>
-      </ul>
-    </header>
+    <section class="content">
+      <header class="header">
+        <ul class="header__list">
+          <li class="header__item">
+            <button class="header__btn">
+              <img src="./img/iconburger.svg" alt="#" />
+            </button>
+          </li>
+          <li class="header__item">
+            <a href="./index.html" class="header__link"
+              ><img src="./img/header_logo.svg" alt="#"
+            /></a>
+          </li>
+          <li class="header__item">
+            <button class="header__btn">
+              <img src="./img/iconsearch.svg" alt="#" />
+            </button>
+          </li>
+        </ul>
+      </header>
 
-    <nav class="nav">
-      <ul class="nav__slides">
-        <li class="nav__slide">
-          <a href="#" class="nav__link nav__link--active"
-            >Ремонтируемые устройства</a
-          >
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Дополнительные услуги</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Цены на услуги</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Специальные цены</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Ремонтируемые бренды</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Адреса сервисных центров</a>
-        </li>
-        <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__slides">
+          <li class="nav__slide">
+            <a href="#" class="nav__link nav__link--active"
+              >Ремонтируемые устройства</a
+            >
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Дополнительные услуги</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Цены на услуги</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Специальные цены</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Ремонтируемые бренды</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Адреса сервисных центров</a>
+          </li>
+          <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
+        </ul>
+      </nav>
 
-    <footer class="footer">
-      <ul class="footer__list">
-        <li class="footer__item">
-          <button class="footer__btn">
-            <img src="./img/iconcall.svg" alt="#" />
-          </button>
-          <button class="footer__btn">
-            <img src="./img/iconchat.svg" alt="#" />
-          </button>
-          <button class="footer__btn">
-            <img src="./img/iconprofile.svg" alt="#" />
-          </button>
-        </li>
-        <li class="footer__item">
-          <a href="#" class="footer__link-email">mail@cps.com</a>
-        </li>
-        <li class="footer__item">
-          <a href="footer__link-phone">8 800 890 8900</a>
-        </li>
-        <li class="footer__item">
-          <a href="" class="footer__lang footer__lang--active">RU</a>
-          <a href="" class="footer__lang">EN</a>
-          <a href="" class="footer__lang">CH</a>
-        </li>
-      </ul>
-    </footer>
+      <footer class="footer">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <button class="footer__btn">
+              <img src="./img/iconcall.svg" alt="#" />
+            </button>
+            <button class="footer__btn">
+              <img src="./img/iconchat.svg" alt="#" />
+            </button>
+            <button class="footer__btn">
+              <img src="./img/iconprofile.svg" alt="#" />
+            </button>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link-email">mail@cps.com</a>
+          </li>
+          <li class="footer__item">
+            <a href="footer__link-phone">8 800 890 8900</a>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__lang footer__lang--active">RU</a>
+            <a href="" class="footer__lang">EN</a>
+            <a href="" class="footer__lang">CH</a>
+          </li>
+        </ul>
+      </footer>
+    </section>
   </body>
 </html>
