--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
           <a href="#" class="nav__link">Специальные цены</a>
         </li>
         <li class="nav__slide">
-          <a href="#" class="nav__link">Ремонтируемые бренды</a>
+          <a href="./call.html" class="nav__link">Ремонтируемые бренды</a>
         </li>
         <li class="nav__slide">
           <a href="./menu.html" class="nav__link">Адреса сервисных центров</a>
         </li>
-        <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
+        <li class="nav__slide">
+          <a href="./contact.html" class="nav__link">Отзывы</a>
+        </li>
       </ul>
     </nav>
 
