--- a/index.html
+++ b/index.html
@@ -11,91 +11,97 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
-      <ul class="header__list">
-        <li class="header__item">
-          <button class="btn"><img src="./img/burger.svg" alt="#" /></button>
-        </li>
-        <li class="header__item"></li>
-        <li class="header__item">
-          <a href="./index.html" class="header__logo"
-            ><img src="./img/header__logo.svg" alt="#"
-          /></a>
-        </li>
-        <li class="header__item">
-          <button class="btn"><img src="./img/iconcall.svg" alt="#" /></button>
-        </li>
-        <li class="header__item">
-          <button class="btn"><img src="./img/iconchat.svg" alt="#" /></button>
-        </li>
-        <li class="header__item">
-          <button class="btn">
-            <img src="./img/Groupprofile.svg" alt="#" />
-          </button>
-        </li>
-        <li class="header__item"></li>
-        <li class="header__item">
-          <button class="btn">
-            <img src="./img/Grouprepair.svg" alt="#" />
-          </button>
-        </li>
-        <li class="header__item">
-          <button class="btn">
-            <img src="./img/iconcheckstatus.svg" alt="#" />
-          </button>
-        </li>
-      </ul>
-      <h1 class="header__title">Услуги и сервисы</h1>
-    </header>
+    <div class="site">
+      <header class="header">
+        <ul class="header__list">
+          <li class="header__item">
+            <button class="btn"><img src="./img/burger.svg" alt="#" /></button>
+          </li>
+          <li class="header__item"></li>
+          <li class="header__item">
+            <a href="./index.html" class="logo"
+              ><img src="./img/header__logo.svg" alt="#"
+            /></a>
+          </li>
+          <li class="header__item">
+            <button class="btn">
+              <img src="./img/iconcall.svg" alt="#" />
+            </button>
+          </li>
+          <li class="header__item">
+            <button class="btn">
+              <img src="./img/iconchat.svg" alt="#" />
+            </button>
+          </li>
+          <li class="header__item">
+            <button class="btn">
+              <img src="./img/Groupprofile.svg" alt="#" />
+            </button>
+          </li>
+          <li class="header__item"></li>
+          <li class="header__item">
+            <button class="btn">
+              <img src="./img/Grouprepair.svg" alt="#" />
+            </button>
+          </li>
+          <li class="header__item">
+            <button class="btn">
+              <img src="./img/iconcheckstatus.svg" alt="#" />
+            </button>
+          </li>
+        </ul>
+        <h1 class="header__title">Услуги и сервисы</h1>
+      </header>
 
-    <nav class="nav">
-      <ul class="nav__slides">
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Ремонтируемые устройства</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Дополнительные услуги</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Цены на услуги</a>
-        </li>
-        <li class="nav__slide">
-          <a href="#" class="nav__link">Специальные цены</a>
-        </li>
-        <li class="nav__slide">
-          <a href="./call.html" class="nav__link">Ремонтируемые бренды</a>
-        </li>
-        <li class="nav__slide">
-          <a href="./menu.html" class="nav__link">Адреса сервисных центров</a>
-        </li>
-        <li class="nav__slide">
-          <a href="./contact.html" class="nav__link">Отзывы</a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__slides">
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Ремонтируемые устройства</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Дополнительные услуги</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Цены на услуги</a>
+          </li>
+          <li class="nav__slide">
+            <a href="#" class="nav__link">Специальные цены</a>
+          </li>
+          <li class="nav__slide">
+            <a href="./call.html" class="nav__link">Ремонтируемые бренды</a>
+          </li>
+          <li class="nav__slide">
+            <a href="./menu.html" class="nav__link">Адреса сервисных центров</a>
+          </li>
+          <li class="nav__slide">
+            <a href="./contact.html" class="nav__link">Отзывы</a>
+          </li>
+        </ul>
+      </nav>
 
-    <main class="content">
-      <article class="content__block">
-        <div class="content__block-text">
-          <p>
-            Мы являемся авторизованным сервисным центром по ремонту техники
-            Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
-            официальной гарантией производителя.
-          </p>
-          <p>
-            Мы успешно работаем с 1992 года и заслужили репутацию надежного
-            партнера, что подтверждает большое количество постоянных клиентов.
-            Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою
-            очередь, советуют нас родным и близким.
-          </p>
+      <main class="content">
+        <div class="content__block">
+          <div class="content__block-text">
+            <p class="content__block-paragraph">
+              Мы являемся авторизованным сервисным центром по ремонту техники
+              Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
+              официальной гарантией производителя.
+            </p>
+            <p class="content__block-paragraph">
+              Мы успешно работаем с 1992 года и заслужили репутацию надежного
+              партнера, что подтверждает большое количество постоянных клиентов.
+              Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою
+              очередь, советуют нас родным и близким.
+            </p>
+          </div>
+
+          <button class="content__btn">Читать далее</button>
         </div>
 
-        <button class="content__btn">Читать далее</button>
-      </article>
-
-      <div class="content__img">
-        <img src="img/image.png" alt="#" />
-      </div>
-    </main>
+        <div class="content__img">
+          <img src="img/image.png" alt="#" />
+        </div>
+      </main>
+    </div>
   </body>
 </html>
