--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <header class="header">
         <ul class="header__list">
           <li class="header__item">
-            <button class="btn"><img src="./img/burger.svg" alt="#" /></button>
+            <button class="btn">
+              <img src="./img/iconburger.svg" alt="#" />
+            </button>
           </li>
           <li class="header__item"></li>
           <li class="header__item">
