--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="header__list">
           <li class="header__item">
             <button class="btn">
-              <img src="./img/iconburger.svg" alt="#" />
+              <img class="btn__img" src="./img/iconburger.svg" alt="#" />
             </button>
           </li>
           <li class="header__item"></li>
@@ -27,28 +27,28 @@
           </li>
           <li class="header__item">
             <button class="btn">
-              <img src="./img/iconcall.svg" alt="#" />
+              <img class="btn__img" src="./img/iconcall.svg" alt="#" />
             </button>
           </li>
           <li class="header__item">
             <button class="btn">
-              <img src="./img/iconchat.svg" alt="#" />
+              <img class="btn__img" src="./img/iconchat.svg" alt="#" />
             </button>
           </li>
           <li class="header__item">
             <button class="btn">
-              <img src="./img/Groupprofile.svg" alt="#" />
+              <img class="btn__img" src="./img/Groupprofile.svg" alt="#" />
             </button>
           </li>
           <li class="header__item"></li>
           <li class="header__item">
             <button class="btn">
-              <img src="./img/Grouprepair.svg" alt="#" />
+              <img class="btn__img" src="./img/Grouprepair.svg" alt="#" />
             </button>
           </li>
           <li class="header__item">
             <button class="btn">
-              <img src="./img/iconcheckstatus.svg" alt="#" />
+              <img class="btn__img" src="./img/iconcheckstatus.svg" alt="#" />
             </button>
           </li>
         </ul>
