--- a/index.html
+++ b/index.html
@@ -16,39 +16,56 @@
         <ul class="header__list">
           <li class="header__item">
             <button class="btn">
-              <img class="btn__img" src="./img/iconburger.svg" alt="#" />
+              <span class="btn__img"
+                ><img src="./img/iconburger.svg" alt="#"
+              /></span>
             </button>
           </li>
-          <li class="header__item"></li>
+
           <li class="header__item">
             <a href="./index.html" class="logo"
               ><img src="./img/header__logo.svg" alt="#"
             /></a>
           </li>
+
           <li class="header__item">
             <button class="btn">
-              <img class="btn__img" src="./img/iconcall.svg" alt="#" />
+              <span class="btn__img"
+                ><img src="./img/iconcall.svg" alt="#"
+              /></span>
+            </button>
+          </li>
+
+          <li class="header__item">
+            <button class="btn">
+              <span class="btn__img"
+                ><img src="./img/iconchat.svg" alt="#"
+              /></span>
+            </button>
+          </li>
+
+          <li class="header__item">
+            <button class="btn">
+              <span class="btn__img"
+                ><img src="./img/Groupprofile.svg" alt="#"
+              /></span>
+            </button>
+          </li>
+
+          <li class="header__item">
+            <button class="btn">
+              <span class="btn__text">Оставить заявку</span>
+              <span class="btn__img"
+                ><img src="./img/Grouprepair.svg" alt="#"
+              /></span>
             </button>
           </li>
           <li class="header__item">
             <button class="btn">
-              <img class="btn__img" src="./img/iconchat.svg" alt="#" />
-            </button>
-          </li>
-          <li class="header__item">
-            <button class="btn">
-              <img class="btn__img" src="./img/Groupprofile.svg" alt="#" />
-            </button>
-          </li>
-          <li class="header__item"></li>
-          <li class="header__item">
-            <button class="btn">
-              <img class="btn__img" src="./img/Grouprepair.svg" alt="#" />
-            </button>
-          </li>
-          <li class="header__item">
-            <button class="btn">
-              <img class="btn__img" src="./img/iconcheckstatus.svg" alt="#" />
+              <span class="btn__text">Статус ремонта</span>
+              <span class="btn__img"
+                ><img class="btn__img" src="./img/checkstatus.svg" alt="#"
+              /></span>
             </button>
           </li>
         </ul>
