--- a/menu.html
+++ b/menu.html
@@ -6,26 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset_style.css" />
     <link rel="stylesheet" href="./menu.css" />
+    <link rel="stylesheet" href="./menu360.css" />
     <style type="text/css"></style>
     <title>Document</title>
   </head>
   <body>
-    <section class="content">
+    <div class="menu">
       <header class="header">
         <ul class="header__list">
           <li class="header__item">
             <button class="header__btn">
-              <img src="./img/iconburger.svg" alt="#" />
+              <span class="header__btn-img"
+                ><img src="./img/iconburger.svg" alt="#"
+              /></span>
             </button>
           </li>
           <li class="header__item">
-            <a href="./index.html" class="header__link"
+            <a href="./index.html" class="logo"
               ><img src="./img/header_logo.svg" alt="#"
             /></a>
           </li>
           <li class="header__item">
             <button class="header__btn">
-              <img src="./img/iconsearch.svg" alt="#" />
+              <span class="header__btn-img"
+                ><img src="./img/iconsearch.svg" alt="#"
+              /></span>
             </button>
           </li>
         </ul>
@@ -74,15 +79,15 @@
             <a href="#" class="footer__link-email">mail@cps.com</a>
           </li>
           <li class="footer__item">
-            <a href="footer__link-phone">8 800 890 8900</a>
+            <a href="#" class="footer__link-phone">8 800 890 8900</a>
           </li>
           <li class="footer__item">
-            <a href="" class="footer__lang footer__lang--active">RU</a>
-            <a href="" class="footer__lang">EN</a>
-            <a href="" class="footer__lang">CH</a>
+            <a href="#" class="footer__lang footer__lang--active">RU</a>
+            <a href="#" class="footer__lang">EN</a>
+            <a href="#" class="footer__lang">CH</a>
           </li>
         </ul>
       </footer>
-    </section>
+    </div>
   </body>
 </html>
