--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,8 @@
       <header class="header">
         <ul class="header__list">
           <li class="header__item">
-            <button class="header__btn">
-              <span class="header__btn-img"
+            <button class="btn">
+              <span class="btn-img"
                 ><img src="./img/iconburger.svg" alt="#"
               /></span>
             </button>
@@ -27,8 +27,8 @@
             /></a>
           </li>
           <li class="header__item">
-            <button class="header__btn">
-              <span class="header__btn-img"
+            <button class="btn">
+              <span class="btn-img"
                 ><img src="./img/iconsearch.svg" alt="#"
               /></span>
             </button>
@@ -37,42 +37,48 @@
       </header>
 
       <nav class="nav">
-        <ul class="nav__slides">
-          <li class="nav__slide">
+        <ul class="nav__list">
+          <li class="nav__item">
             <a href="#" class="nav__link nav__link--active"
               >Ремонтируемые устройства</a
             >
           </li>
-          <li class="nav__slide">
+          <li class="nav__item">
             <a href="#" class="nav__link">Дополнительные услуги</a>
           </li>
-          <li class="nav__slide">
+          <li class="nav__item">
             <a href="#" class="nav__link">Цены на услуги</a>
           </li>
-          <li class="nav__slide">
+          <li class="nav__item">
             <a href="#" class="nav__link">Специальные цены</a>
           </li>
-          <li class="nav__slide">
+          <li class="nav__item">
             <a href="#" class="nav__link">Ремонтируемые бренды</a>
           </li>
-          <li class="nav__slide">
+          <li class="nav__item">
             <a href="#" class="nav__link">Адреса сервисных центров</a>
           </li>
-          <li class="nav__slide"><a href="#" class="nav__link">Отзывы</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
         </ul>
       </nav>
 
       <footer class="footer">
         <ul class="footer__list">
           <li class="footer__item">
-            <button class="footer__btn">
-              <img src="./img/iconcall.svg" alt="#" />
+            <button class="btn">
+              <span class="btn-img">
+                <img src="./img/iconcall.svg" alt="#" />
+              </span>
             </button>
-            <button class="footer__btn">
-              <img src="./img/iconchat.svg" alt="#" />
+            <button class="btn">
+              <span class="btn-img">
+                <img src="./img/iconchat.svg" alt="#" />
+              </span>
             </button>
-            <button class="footer__btn">
-              <img src="./img/iconprofile.svg" alt="#" />
+            <button class="btn">
+              <span class="btn-img">
+                <img src="./img/iconprofile.svg" alt="#" />
+              </span>
             </button>
           </li>
           <li class="footer__item">
@@ -82,9 +88,22 @@
             <a href="#" class="footer__link-phone">8 800 890 8900</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__lang footer__lang--active">RU</a>
-            <a href="#" class="footer__lang">EN</a>
-            <a href="#" class="footer__lang">CH</a>
+            <form method="get" action="#" class="lang">
+              <input
+                type="radio"
+                name="ru"
+                id="ru"
+                class="lang__item"
+                checked
+              />
+              <label for="ru" class="lang__text">RU</label>
+
+              <input type="radio" name="en" id="en" class="lang__item" />
+              <label for="en" class="lang__text">EN</label>
+
+              <input type="radio" name="ch" id="ch" class="lang__item" />
+              <label for="ch" class="lang__text">CH</label>
+            </form>
           </li>
         </ul>
       </footer>
