--- a/menu.html
+++ b/menu.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./menu.css" />
     <link rel="stylesheet" href="./menu360.css" />
     <style type="text/css"></style>
-    <title>Document</title>
+    <title>CPS Menu</title>
   </head>
   <body>
-    <div class="menu">
-      <header class="header">
+    <aside class="menu">
+      <div class="header">
         <ul class="header__list">
           <li class="header__item">
             <button class="btn">
@@ -34,7 +34,7 @@
             </button>
           </li>
         </ul>
-      </header>
+      </div>
 
       <nav class="nav">
         <ul class="nav__list">
@@ -62,7 +62,7 @@
         </ul>
       </nav>
 
-      <footer class="footer">
+      <div class="footer">
         <ul class="footer__list">
           <li class="footer__item">
             <button class="btn">
@@ -106,7 +106,7 @@
             </form>
           </li>
         </ul>
-      </footer>
-    </div>
+      </div>
+    </aside>
   </body>
 </html>
