--- a/menu.html
+++ b/menu.html
@@ -12,21 +12,21 @@
   </head>
   <body>
     <aside class="menu">
-      <div class="header">
-        <ul class="header__list">
-          <li class="header__item">
+      <div class="menu__header">
+        <ul class="menu__header-list">
+          <li class="menu__header-item">
             <button class="btn">
               <span class="btn-img"
                 ><img src="./img/iconburger.svg" alt="#"
               /></span>
             </button>
           </li>
-          <li class="header__item">
+          <li class="menu__header-item">
             <a href="./index.html" class="logo"
               ><img src="./img/header_logo.svg" alt="#"
             /></a>
           </li>
-          <li class="header__item">
+          <li class="menu__header-item">
             <button class="btn">
               <span class="btn-img"
                 ><img src="./img/iconsearch.svg" alt="#"
@@ -36,35 +36,37 @@
         </ul>
       </div>
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link nav__link--active"
+      <nav class="menu__nav">
+        <ul class="menu__nav-list">
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link menu__nav-link--active"
               >Ремонтируемые устройства</a
             >
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Дополнительные услуги</a>
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link">Дополнительные услуги</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Цены на услуги</a>
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link">Цены на услуги</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Специальные цены</a>
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link">Специальные цены</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Ремонтируемые бренды</a>
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link">Ремонтируемые бренды</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Адреса сервисных центров</a>
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link">Адреса сервисных центров</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
+          <li class="menu__nav-item">
+            <a href="#" class="menu__nav-link">Отзывы</a>
+          </li>
         </ul>
       </nav>
 
-      <div class="footer">
-        <ul class="footer__list">
-          <li class="footer__item">
+      <div class="menu__footer">
+        <ul class="menu__footer-list">
+          <li class="menu__footer-item">
             <button class="btn">
               <span class="btn-img">
                 <img src="./img/iconcall.svg" alt="#" />
@@ -81,13 +83,13 @@
               </span>
             </button>
           </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link-email">mail@cps.com</a>
+          <li class="menu__footer-item">
+            <a href="#" class="menu__footer-email">mail@cps.com</a>
           </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link-phone">8 800 890 8900</a>
+          <li class="menu__footer-item">
+            <a href="#" class="menu__footer-phone">8 800 890 8900</a>
           </li>
-          <li class="footer__item">
+          <li class="menu__footer-item">
             <form method="get" action="#" class="lang">
               <input
                 type="radio"
