--- a/swiper_services/services.html
+++ b/swiper_services/services.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./reset_style.css" />
     <link rel="stylesheet" href="./services.css" />
     <link rel="stylesheet" href="./min768.css" />
-    <link rel="stylesheet" href="./swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./swiper-vars.scss" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -18,119 +17,98 @@
     <title>Swiper</title>
   </head>
   <body>
-    <header class="header">
-      <h1 class="header__title">Ремонт техники различных брендов</h1>
-    </header>
-    <main class="content">
-      <nav id="swiper">
-        <ul class="swiper-wrapper">
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/lenovo.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/samsung.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/apple.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/viewsonic.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/bosch.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/hp.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/acer.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/sony.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/lenovo.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/samsung.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-          <li class="swiper-slide">
-            <div class="swiper-div">
-              <img src="./img/apple.png" alt="#" />
-              <button class="swiper-button">
-                <img src="./img/dropdown.svg" alt="#" />
-              </button>
-            </div>
-          </li>
-        </ul>
-        <ul class="swiper-pagination">
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-          <li class="swiper-pagination-bullet"></li>
-        </ul>
+    <section class="services">
+      <h1 class="services__heading heading-gradient">
+        Ремонт техники различных брендов
+      </h1>
+      <div class="content">
+        <div id="swiper">
+          <ul class="swiper-wrapper">
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/lenovo.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/samsung.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/apple.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/viewsonic.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/bosch.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/hp.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/acer.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/sony.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/lenovo.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/samsung.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+            <li class="swiper-slide">
+              <a href="#" class="swiper-div">
+                <img src="./img/apple.png" alt="#" />
+                <img src="./img/go.svg" alt="#" />
+              </a>
+            </li>
+          </ul>
+          <ul class="swiper-pagination">
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+            <li class="swiper-pagination-bullet"></li>
+          </ul>
 
-        <!-- If we need pagination -->
-      </nav>
+          <!-- If we need pagination -->
+        </div>
 
-      <button class="content__btn-more">Показать все</button>
-      <script src="./services.js"></script>
-      <script src="./swiper-bundle.min.js"></script>
-    </main>
+        <button class="content__btn-more">Показать все</button>
+        <script src="./swiper.js"></script>
+      </div>
+    </section>
   </body>
 </html>
